--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Bonjour 👋</h1>
   <p>Ceci est mon petit mot affiché grâce à GitHub.</p>
-  <img src="IMG_3440.jpeg" >
+  <img src="IMG_3440.jpeg" width=400px>
 </body>
 </html>
